Fix translation typo

--- a/translations/pt.csv
+++ b/translations/pt.csv
@@ -139,7 +139,7 @@ Cancelled,Cancelado,
 "Cannot Delete","Não foi possivel deletar",
 "Cannot Delete Account","Não é possivel deletar a conta",
 "Cannot Export","Não foi possivel exportar",
-"Cannot Import","Não foi possível importar,
+"Cannot Import","Não foi possível importar",
 "Cannot Open File","Não foi possível abrir o arquivo",
 "Cannot cancel ${0} ${1} because of the following ${2}: ${3}","Não foi possivel cancelar ${0} ${1} devido ${2}: ${3}",
 "Cannot cancel ${0} because of the following ${1}: ${2}","Não foi possível cancelar ${0} devido ${1}: ${2}",
