--- a/translations/pt.csv
+++ b/translations/pt.csv
@@ -321,7 +321,7 @@ Empty,Vazio,
 "Enable Point of Sale","Ativar Ponto de Venda",
 "Enable Price List","Ativar lista de preços",
 "Enable Serial Number","Habilitar Nº de Série",
-"Enable Stock Returns","Habilitar" Devoluções no Estoque",
+"Enable Stock Returns","Habilitar Devoluções no Estoque",
 "Enable UOM Conversion","Habilitar Conversão de Unidade",
 Enabled,"Habilitado",
 "Enabled For","Habilitado para ",
