--- a/translations/pt.csv
+++ b/translations/pt.csv
@@ -423,7 +423,7 @@ Help,Ajuda,
 "Hide Get Started","Esconder a página de Inicio",
 "Hide Group Amounts","Ocultar Agrupamento de Valores",
 "Hide Month/Year","Ocultar Mês/Ano",
-"Hides the Get Started section from the sidebar. Change will be visible on restart or refreshing the app.","Esconde a secção "Início" da barra lateral. A alteração será visível no reinício ou na actualização da aplicação.",
+"Hides the Get Started section from the sidebar. Change will be visible on restart or refreshing the app.","Esconde a seção 'Início' da barra lateral. A alteração será visível ao reiniciar ou na atualização da aplicação.",
 Hour,Hora,
 INR,,
 Image,Imagem,
