--- a/translations/pt.csv
+++ b/translations/pt.csv
@@ -895,7 +895,7 @@ Stock,Estoque,
 "Stock Entries","Entradas de estoque",
 "Stock Expenses","Despesas de estoque",
 "Stock In Hand","Estoque em mão",
-"Stock In Hand Acc.","Conta de estoque em mãos"",
+"Stock In Hand Acc.","Conta de estoque em mãos",
 "Stock Ledger","Razão de estoque",
 "Stock Ledger Entry","Entrada de razão de estoque",
 "Stock Liabilities","Passivos de estoque",
