fix: fix stock translation, should be  '库存' not '股票'

--- a/translations/zh-CN.csv
+++ b/translations/zh-CN.csv
@@ -888,17 +888,17 @@ Start,开始,
 State,状态,
 "State Tax",国家税率,
 Status,状态,
-Stock,股票,
-"Stock Adjustment",股票调整,
+Stock,库存,
+"Stock Adjustment",库存调整,
 "Stock Assets",库存资产,
 "Stock Balance",库存余额,
 "Stock Entries",库存记录,
-"Stock Expenses",股票费用,
+"Stock Expenses",库存费用,
 "Stock In Hand",现有库存,
 "Stock In Hand Acc.",库存在手账户,
 "Stock Ledger",库存分类账,
 "Stock Ledger Entry",库存分类账输入,
-"Stock Liabilities",股票负债,
+"Stock Liabilities",库存负债,
 "Stock Movement",调拨单,
 "Stock Movement Item",库存调拨,
 "Stock Movement No.",库存调拨,
@@ -908,7 +908,7 @@ Stock,股票,
 "Stock Not Received",在途库存,
 "Stock Not Shipped",未发货库存,
 "Stock Not Transferred",未转移库存,
-"Stock Received But Not Billed",股票已收到但未开票,
+"Stock Received But Not Billed",库存已收到但未开票,
 "Stock Received But Not Billed Acc.",已收到但未开具账单的库存,
 "Stock Transfer Item",库存转让商品,
 "Stock Unit",库存单位,
