feature: commit zh-CN entries

--- a/translations/zh-CN.csv
+++ b/translations/zh-CN.csv
@@ -83,7 +83,7 @@ Address,地址,
 All,全部,
 Amount,总计,
 "Amount Paid",付款金额,
-"Amount: ${0} and writeoff: ${1} is less than the total amount allocated to references: ${2}.","金额：${0} 和注销：${1} 少于分配给参考的总金额：${2}。",
+"Amount: ${0} and writeoff: ${1} is less than the total amount allocated to references: ${2}.","金额：${0} 和核销：${1} 少于分配给参考的总金额：${2}。",
 "Amount: ${0} is less than the total amount allocated to references: ${1}.","金额：${0} 小于分配给参考的总金额：${1}。",
 Amounts,金额,
 "An entry is cancelled only if it is in the submitted state.",只有当条目处于已提交状态时，才会取消该条目,
@@ -1042,11 +1042,11 @@ View,查看,
 We,我们,
 "Welcome to Frappe Books","欢迎使用 Frappe Books",
 "Width (in cm)","宽度 (cm)",
-"Write Off",注销,
-"Write Off Account",注销账户,
-"Write Off Account ${0} does not exist. Please set Write Off Account in General Settings","注销帐户 ${0} 不存在。请在常规设置中设置核销科目",
-"Write Off Account not set. Please set Write Off Account in General Settings","未设置注销帐户。 请在通用设置中设置注销账户",
-"Write Off Entry",注销条目,
+"Write Off",核销,
+"Write Off Account",核销账户,
+"Write Off Account ${0} does not exist. Please set Write Off Account in General Settings","核销帐户 ${0} 不存在。请在常规设置中设置核销科目",
+"Write Off Account not set. Please set Write Off Account in General Settings","未设置核销帐户。 请在通用设置中设置核销账户",
+"Write Off Entry",核销条目,
 "Year to Date",年初至今,
 Yearly,每年,
 Years,年,
