--- a/translations/sv.csv
+++ b/translations/sv.csv
@@ -221,7 +221,7 @@
 "Create your first sales invoice for the created customer","Skapa din första försäljningsfaktura för den skapade kunden",
 "Created","Skapad",
 "Created By","Skapad av",
-"Creating Items and Parties","Skapa objekt och partier",
+"Creating Items and Parties","Skapa objekt och parter",
 "Creating Journal Entries","Skapa journalposter",
 "Creating Purchase Invoices","Skapa köpfakturor",
 "Credit","Kredit",
@@ -492,7 +492,7 @@
 "January","Januari",
 "John Doe","Sven Svensson",
 "Journal Entries","Journalsposter",
-"Journal Entry","Joruanlspost",
+"Journal Entry","Journalpost",
 "Journal Entry Account","Journalpostskonto",
 "Journal Entry Number Series","Journalpostsnummer serie",
 "Journal Entry Print Template","Journalpost utskriftsmall",
@@ -633,7 +633,7 @@
 "Paid Change","Betalad förändring",
 "Parent","Förälder",
 "Parent Account","Förälderkonto",
-"Party","Parti",
+"Party","Part",
 "Patch Run","Patchkörning",
 "Pay","Betala",
 "Payable","Betalbar",
