--- a/translations/nl.csv
+++ b/translations/nl.csv
@@ -1,5 +1,5 @@
 ${0},,
-"${0} ${1} already exists.","${0} ${1} bestaat al.,
+"${0} ${1} already exists.","${0} ${1} bestaat al.",
 "${0} ${1} does not exist","${0} ${1} bestaat niet",
 "${0} ${1} has been modified after loading please reload entry.","${0} ${1} is gewijzigd na het laden laad de invoer opnieuw.",
 "${0} ${1} is linked with existing records.","${0} ${1} is gekoppeld aan bestaande records.",
