--- a/translations/nl.csv
+++ b/translations/nl.csv
@@ -6,7 +6,7 @@ ${0},,
 "${0} account not set in Inventory Settings.","${0} account niet ingesteld in Inventarisinstellingen.",
 "${0} already saved","${0} reeds opgeslagen",
 "${0} already submitted","${0} reeds ingediend",
-"${0} cancelled""${0} geannuleerd",,
+"${0} cancelled","${0} geannuleerd",
 "${0} cannot be cancelled","${0} kan niet worden geannuleerd",
 "${0} cannot be deleted","${0} kan niet worden verwijderd",
 "${0} deleted","${0} verwijderd",
@@ -197,14 +197,14 @@ Contains,Bevat,
 "Conversion Factor","Conversiefactor",
 "Cost Of Goods Sold Acc.","Kostprijs van Verkochte Goederen Acc.",
 "Cost of Goods Sold","Kosten van Verkochte Goederen",
-"Could not connect to database file ${0}, please select the file manually","Kan geen verbinding maken met databasebestand ${0}, selecteer het bestand handmatig".,
+"Could not connect to database file ${0}, please select the file manually","Kan geen verbinding maken met databasebestand ${0}, selecteer het bestand handmatig.",
 Count,Tellen,
 "Counter Cash Account","Tegenrekening Contant",
 Country,Land,
 "Country Code","Landcode",
 "Country code used to initialize regional settings.","Landcode gebruikt om regionale instellingen te initialiseren.",
 Courier,Courier,
-Cr.,Cr,
+Cr.,Cr.,
 "Cr. ${0}","Cr. ${0}",
 Create,Maak,
 "Create Demo","Demo Aanmaken",
@@ -234,7 +234,7 @@ Current,Huidige,
 "Current Assets","Lopende Activa",
 "Current Liabilities","Kortlopende Schulden",
 "Custom Field","Aangepast Veld",
-"Custom Fields",""Aangepaste Velden"",
+"Custom Fields","Aangepaste Velden",
 "Custom Form","Aangepast Formulier",
 "Custom Hex","Aangepaste Hex",
 Customer,Klant,
@@ -249,7 +249,7 @@ Data,Data,
 "Database Error","Database Fout",
 "Database file: ${0}","Databasebestand: ${0}",
 Date,Datum,
-"Date Format",Datumformaat,
+"Date Format","Datumformaat",
 "Date Time","Datum Tijd",
 Day,Dag,
 Debit,Debet,
@@ -306,7 +306,7 @@ Duplicate,Duplicaat,
 "Duplicate columns found: ${0}","Dubbele kolommen gevonden: ${0}",
 "Duties and Taxes","Rechten en Taksen",
 "Dynamic Link","Dynamische Link",
-"Earnest Money",Waarborgsom,
+"Earnest Money","Waarborgsom",
 "Electronic Equipments","Elektronische Uitrusting",
 Email,"E-mail :",
 "Email Address","E-mail Adres",
@@ -315,7 +315,7 @@ Empty,Leeg,
 "Enable Barcodes","Barcodes Inschakelen",
 "Enable Batches","Batches Inschakelen",
 "Enable Discount Accounting","Korting Berekenen Inschakelen",
-"Enable Form Customization","Formulieraanpassing Inschakelen".,
+"Enable Form Customization","Formulieraanpassing Inschakelen",
 "Enable Inventory","Inventarisatie Inschakelen",
 "Enable Invoice Returns","Factuurretouren Inschakelen",
 "Enable Point of Sale","Point of Sale Inschakelen",
@@ -338,8 +338,8 @@ Entry,Toegang,
 "Entry has Grand Total ${0}. Please verify amounts.","Inschrijving heeft Totaal ${0}. Controleer bedragen.",
 Equity,Aandelen,
 Error,Fout,
-"Exchange Gain/Loss",Wisselkoerswinsten/-verliezen,
-"Exchange Rate",Wisselkoers,
+"Exchange Gain/Loss","Wisselkoerswinsten/-verliezen",
+"Exchange Rate","Wisselkoers",
 "Excise Entry","Accijns Invoer",
 "Existing Company","Bestaand Bedrijf",
 Expand,Uitbreiden,
@@ -404,30 +404,30 @@ General,Algemeen,
 "General Ledger","Algemeen Grootboek",
 "Get Started","Aan de slag",
 Global,Wereldwijd,
-"Go back to the previous page","Ga terug naar de vorige pagina".,
+"Go back to the previous page","Ga terug naar de vorige pagina",
 Gram,Gram,
 "Grand Total","Groot Totaal",
 "Greater Than","Groter dan",
 Green,Groen,
-"Group By","Groep Door".,
+"Group By","Groep Door",
 HSN/SAC,HSN/SAC,
-"HSN/SAC Code","HSN/SAC-code,
+"HSN/SAC Code","HSN/SAC-code",
 "Half Yearly","Halfjaarlijks",
 "Half Years","Half Jaar",
 "Has Batch","Heeft Partij",
-"Has Serial Number","Heeft Serienummer".,
+"Has Serial Number","Heeft Serienummer",
 "Height (in cm)","Hoogte (in cm)",
 Help,Help,
-"Hex Value",Hex-waarde,
+"Hex Value","Hex-waarde",
 "Hidden values will be visible on Print on.","Verborgen waarden worden zichtbaar bij Afdrukken.",
 "Hide Get Started","Verberg Aan de slag",
-"Hide Group Amounts","Verberg Groepsbedragen".,
-"Hide Month/Year","Verberg Maand/Jaar".,
+"Hide Group Amounts","Verberg Groepsbedragen",
+"Hide Month/Year","Verberg Maand/Jaar",
 "Hides the Get Started section from the sidebar. Change will be visible on restart or refreshing the app.","Verbergt de sectie Aan de slag uit de zijbalk. De wijziging wordt zichtbaar bij het opnieuw opstarten of verversen van de app.",
 Hour,Uur,
 INR,INR,
 Image,Beeld,
-"Import Complete","Importeren Voltooid".,
+"Import Complete","Importeren Voltooid",
 "Import Data","Gegevens importeren",
 "Import Data.","Gegevens importeren.",
 "Import Type","Type Invoer",
@@ -484,7 +484,7 @@ Item,Artikel,
 "Item Description","Artikel Beschrijving",
 "Item Discounts","Artikel Kortingen",
 "Item Name","Naam Artikel",
-"Item Prices","Artikel Prijzen".,
+"Item Prices","Artikel Prijzen",
 "Item with From location not found","Artikel met Van locatie niet gevonden",
 "Item with To location not found","Artikel met Naar locatie niet gevonden",
 "Item with barcode ${0} not found.","Artikel met barcode ${0} niet gevonden.",
@@ -632,7 +632,7 @@ Paid,Betaald,
 "Paid ${0}","Betaald ${0}",
 "Paid Change","Wisselgeld",
 Parent,Hoofd,
-"Parent Account",Ouderrekening,
+"Parent Account","Ouderrekening",
 Party,Partij,
 "Patch Run","Patch Run",
 Pay,Betaal,
@@ -644,8 +644,8 @@ Payment,Betaling,
 "Payment No","Betaling Nr.",
 "Payment Number Series","Betalingsnummer Serie",
 "Payment Print Template","Sjabloon Afdrukken van Betalingen",
-"Payment Reference",Betalingsreferentie,
-"Payment Type",Betalingswijze,
+"Payment Reference","Betalingsreferentie",
+"Payment Type","Betalingswijze",
 "Payment amount cannot be ${0}.","Het betalingsbedrag kan niet ${0} zijn.",
 "Payment amount cannot be less than zero.","Het bedrag van de betaling kan niet lager zijn dan nul.",
 "Payment amount cannot exceed ${0}.","Het bedrag kan niet hoger zijn dan ${0}.",
@@ -675,16 +675,16 @@ Place,Plaats,
 "Please set Round Off Account in the Settings.","Stel Rekening Afronden in bij Instellingen.",
 "Please set a Display Doc","Stel een Weergavedocument in",
 "Point of Sale","Verkooppunt",
-"Postal Code",Postcode,
-"Postal Expenses",Portokosten,
-"Posting Date",Plaatsingsdatum,
+"Postal Code","Postcode",
+"Postal Expenses","Portokosten",
+"Posting Date","Plaatsingsdatum",
 Prefix,Voorvoegsel,
 "Price List","Prijslijst",
 "Price List Item","Prijslijst Artikel",
 "Prime Bank","Primaire Bank",
 Print,Afdrukken,
 "Print ${0}","${0} Afdrukken",
-"Print Settings",Afdrukinstellingen,
+"Print Settings","Afdrukinstellingen",
 "Print Setup","Afdrukinstelling",
 "Print Template","Afdruksjabloon",
 "Print Template Name not set","Naam Afdruksjabloon niet ingesteld",
@@ -746,8 +746,8 @@ Red,Rood,
 "Ref. Name","Ref. Naam",
 "Ref. Type","Ref. Type",
 Reference,Referentie,
-"Reference Date",Referentiedatum,
-"Reference Number",Referentienummer,
+"Reference Date","Referentiedatum",
+"Reference Number","Referentienummer",
 "Reference Type","Referentie Type",
 References,Referenties,
 "Reload Frappe Books?","Frappe Books Herladen?",
@@ -769,7 +769,7 @@ Reverts,Herstellen,
 "Right Index","Juiste Index",
 Role,Rol,
 "Root Type","Root Type",
-"Round Off",Afronden,
+"Round Off","Afronden",
 "Round Off Account","Rekening Afronden",
 "Round Off Account Not Found","Afrondrekening Niet Gevonden",
 "Rounded Off","Afgerond",
@@ -778,7 +778,7 @@ Sa,Za,
 Salary,Salaris,
 Sales,Verkopen,
 "Sales Acc.","Verkoop Acc.",
-"Sales Expenses",Verkoopkosten,
+"Sales Expenses","Verkoopkosten",
 "Sales Invoice","Verkoopfactuur",
 "Sales Invoice ${0} is Submitted","Verkoopfactuur ${0} is Ingediend",
 "Sales Invoice Item","Verkoopfactuur Item",
@@ -961,7 +961,7 @@ Temporary,Tijdelijk,
 Terms,Voorwaarden,
 Text,Tekst,
 Th,Do,
-"The following characters cannot be used ${0} in a Number Series name.""De volgende tekens kunnen niet worden gebruikt ${0} in een nummerreeksnaam.",,
+"The following characters cannot be used ${0} in a Number Series name.","De volgende tekens kunnen niet worden gebruikt ${0} in een nummerreeksnaam.",
 "The following items have insufficient quantity for Shipment: ${0}","De volgende items hebben onvoldoende hoeveelheid voor verzending: ${0}",
 "This Month","Deze Maand",
 "This Quarter","Dit Kwartaal",
@@ -982,7 +982,7 @@ To,Naar,
 "Toggle Key Hints","Toetshints schakelen",
 "Toggle Linked Entries widget, not available in Quick Edit view.","Schakel de widget Gekoppelde items in, niet beschikbaar in de weergave Snel bewerken.",
 "Toggle between form and full width","Schakelen tussen formulier en volledige breedte",
-"Toggle sidebar""Zijbalk Omschakelenr",,
+"Toggle sidebar","Zijbalk Omschakelenr",
 "Toggle the Create filter","Schakel het filter Maken in",
 "Toggle the Docs filter","Schakel het filter Documenten in",
 "Toggle the List filter","Schakel het Lijstfilter in",
@@ -994,9 +994,9 @@ Total,Totaal,
 "Total Asset (Debit)","Totaal Activa (Debet)",
 "Total Debit: ${0} must be equal to Total Credit: ${1}","Totaal debet: ${0} moet gelijk zijn aan Totaal Krediet: ${1}",
 "Total Discount","Totale Korting",
-"Total Equity (Credit)","Totaal Eigen Vermogen (krediet)",
+"Total Equity (Credit)","Totaal Eigen Vermogen (Krediet)",
 "Total Expense (Debit)","Totale Uitgaven (Debet)",
-"Total Income (Credit)","Totaal Inkomen (krediet)",
+"Total Income (Credit)","Totaal Inkomen (Krediet)",
 "Total Liability (Credit)","Totale Verplichting (Krediet)",
 "Total Profit","Totale Winst",
 "Total Quantity","Totale Hoeveelheid",
@@ -1008,8 +1008,8 @@ Transfer,Overdracht,
 "Transfer Unit","Overdrachtseenheid",
 "Transfer Unit ${0} is not applicable for Item ${1}","Overdrachtseenheid ${0} is niet van toepassing op artikel ${1}",
 "Transfer will cause future entries to have negative stock.","Overboeking zorgt ervoor dat toekomstige boekingen een negatieve voorraad hebben.",
-"Travel Expenses",Reisuitgaven,
-"Trial Balance",Proefbalans,
+"Travel Expenses","Reisuitgaven",
+"Trial Balance","Proefbalans",
 Tu,Di,
 Type,Type,
 "Type to search...","Type om te zoeken...",
@@ -1042,7 +1042,7 @@ View,Bekijk,
 We,Woe,
 "Welcome to Frappe Books","Welkom bij Frappe Books",
 "Width (in cm)","Breedte (in cm)",
-"Write Off",Afschrijven,
+"Write Off","Afschrijven",
 "Write Off Account","Rekening Afschrijven",
 "Write Off Account ${0} does not exist. Please set Write Off Account in General Settings","Afschrijfrekening ${0} bestaat niet. Stel de rekening voor afschrijven in bij Algemene instellingen",
 "Write Off Account not set. Please set Write Off Account in General Settings","Afschrijfrekening niet ingesteld. Stel de rekening voor afschrijven in bij Algemene Instellingen",
