--- a/translations/nl.csv
+++ b/translations/nl.csv
@@ -364,7 +364,7 @@ Fieldname,Veldnaam,
 "Fieldname ${0} already used for Custom Field ${1}","Veldnaam ${0} al gebruikt voor Aangepast Veld ${1}",
 Fieldtype,Veldtype,
 "File ${0} does not exist.","Bestand ${0} bestaat niet.",
-"File selection failed","Bestandsselectie mislukt".,
+"File selection failed","Bestandsselectie mislukt",
 Fill,Vullen,
 Filter,Filter,
 "Fiscal Year","Boekjaar",
