--- a/translations/nl.csv
+++ b/translations/nl.csv
@@ -599,7 +599,7 @@ Okay,Oké,
 "Open Count","Open Telling",
 "Open Documentation","Open Documentatie",
 "Open Folder","Map Openen",
-"Open Print View".,"Afdrukweergave Openen",
+"Open Print View","Afdrukweergave Openen",
 "Open Print View if Print is available.","Open de Afdrukweergave als Afdrukken beschikbaar is.",
 "Open Quick Search","Snel Zoeken Openen",
 "Open Report Print View","Rapport Openen Afdrukweergave",
@@ -608,7 +608,7 @@ Okay,Oké,
 "Opening (Dr)","Opening (Dr)",
 "Opening Amount","Openingsbedrag",
 "Opening Balance Equity","Openingssaldo Eigen vermogen",
-"Opening Balances",Openingssaldi,
+"Opening Balances","Openingssaldi",
 "Opening Cash Amount can not be negative.","Het Openingskasbedrag kan niet negatief zijn.",
 "Opening Cash In Denominations","Geldmiddelen openen in Coupures",
 "Opening Date","Openingsdatum",
@@ -687,9 +687,9 @@ Print,Afdrukken,
 "Print Settings","Afdrukinstellingen",
 "Print Setup","Afdrukinstelling",
 "Print Template","Afdruksjabloon",
-"Print Template Name not set","Naam Afdruksjabloon niet ingesteld",
-"Print Template is empty","Afdruksjabloon is leeg",
-"Print Templates","Afdruksjablonen",
+"Print Template Name not set","Naam Afdruk-template niet ingesteld",
+"Print Template is empty","Afdruk-template is leeg",
+"Print Templates","Afdruk-templates",
 "Print View","Afdrukweergave",
 "Print and Stationery","Drukwerk en Briefpapier",
 Product,Product,
@@ -700,7 +700,7 @@ Purchase,Inkoop,
 "Purchase Invoice","Inkoopfactuur",
 "Purchase Invoice Item","Aankoopfactuur Item",
 "Purchase Invoice Number Series","Serie Inkoopfactuurnummer",
-"Purchase Invoice Print Template","Sjabloon voor afdrukken Inkoopfactuur",
+"Purchase Invoice Print Template","Template voor afdrukken Inkoopfactuur",
 "Purchase Invoice Terms","Voorwaarden Inkoopfactuur",
 "Purchase Invoices","Inkoopfacturen",
 "Purchase Item","Aankoop Artikel",
@@ -713,7 +713,7 @@ Purchase,Inkoop,
 "Purchase Receipt Item","Aankoopbon Artikel",
 "Purchase Receipt Location","Locatie Inkoopbon",
 "Purchase Receipt Number Series","Serie Inkoopbonnummer",
-"Purchase Receipt Print Template","Sjabloon voor Afdrukken Inkoopbon",
+"Purchase Receipt Print Template","Template voor Afdrukken Inkoopbon",
 "Purchase Receipt Terms","Inkoopvoorwaarden",
 Purchases,Aankopen,
 Purple,Paars,
@@ -758,7 +758,7 @@ Report,Meld,
 Reports,Verslagen,
 "Required fields not selected: ${0}","Verplichte velden niet geselecteerd: ${0}",
 "Retained Earnings","Ingehouden Winst",
-Rendement,,
+Efficiency,Rendement,
 "Return Against","Rendement Tegen",
 "Return Issued","Teruggave",
 "Reverse Chrg.","Omgekeerde Kst.",
@@ -798,7 +798,7 @@ Sales,Verkopen,
 "Sales Quote Print Template","Sjabloon voor Verkoopofferte",
 "Sales Quotes","Verkoopoffertes",
 "Sales and Purchase","Verkoop en Inkoop",
-Save,"Sla op",
+Save,Opslaan,
 "Save ${0}?","${0} Opslaan?",
 "Save Customizations","Aanpassingen Opslaan",
 "Save Template","Sjabloon Opslaan",
