chore: added some german translations

--- a/translations/de.csv
+++ b/translations/de.csv
@@ -137,14 +137,14 @@ Cancel,Abbrechen,
 Cancelled,Storniert,
 "Cannot Commit Error","Fehler kann nicht eingereicht werden",
 "Cannot Delete","Löschen nicht möglich",
-"Cannot Delete Account",,
+"Cannot Delete Account","Account kann nicht gelöscht werden",
 "Cannot Export","Export nicht möglich",
 "Cannot Import","Import nicht möglich",
 "Cannot Open File","Kann Datei nicht öffnen",
 "Cannot cancel ${0} ${1} because of the following ${2}: ${3}","Kann ${0} ${1} wegen der folgenden ${2} nicht stornieren: ${3}",
 "Cannot cancel ${0} because of the following ${1}: ${2}",,
 "Cannot delete ${0} ""${1}"" because of linked entries.","Kann ${0} ""${1}"" wegen verknüpfter Einträge nicht löschen",
-"Cannot open file",,
+"Cannot open file","Datei kann nicht geöffnet werden",
 "Cannot perform operation.","Kann die Operation nicht ausführen",
 "Cannot read file","Kann die Datei nicht lesen",
 "Capital Equipments",Investitionsgüter,
@@ -177,7 +177,7 @@ Closing,Abschluss,
 "Closing (Dr)","Abschluss (Soll)",
 "Closing Amount",,
 "Closing Cash In Denominations",,
-"Closing Date",,
+"Closing Date","Abschlussdatum",
 Collapse,Einklappen,
 Color,Farbe,
 "Commission on Sales",Umsatzprovision,
@@ -212,9 +212,9 @@ Create,Erstellen,
 "Create Purchase Invoice","Einkaufs-Rechnung anlegen",
 "Create Sale",Verkauf,
 "Create Sales Invoice","Verkaufs-Rechnung anlegen",
-"Create a demo company to try out Frappe Books",,
-"Create a new company and store it on your computer",,
-"Create a new company or select an existing one from your computer",,
+"Create a demo company to try out Frappe Books","Erstelle eine Demofirma, um Frappe Books auszuprobieren",
+"Create a new company and store it on your computer","Erstelle eine neue Firma und speicher sie auf deinem Computer",
+"Create a new company or select an existing one from your computer","Erstelle eine neue Firma oder wähle eine existierende von deinem Computer aus",
 "Create a new entry of the same type as the List View","Erstellen Sie einen neuen Eintrag des gleichen Typs wie in der Listenansicht.",
 "Create new ${0} entry?","Neuen Eintrag ${0} erstellen?",
 "Create your first purchase invoice from the created supplier","Erstellen Sie Ihre erste Einkaufsrechnung vom erstellten Lieferanten.",
@@ -264,9 +264,9 @@ Default,Standard,
 Defaults,Voreinstellungen,
 Delete,Löschen,
 "Delete ${0}?","${0} löschen?",
-"Delete Account",,
+"Delete Account","Account löschen",
 "Delete Failed","Löschen fehlgeschlagen",
-"Delete Group",,
+"Delete Group","Gruppe löschen",
 Delivered,Geliefert,
 Denomination,,
 Depreciation,Abschreibung,
@@ -999,7 +999,7 @@ Total,Summe,
 "Total Income (Credit)","Summe Erlöse (Haben)",
 "Total Liability (Credit)","Summe Verbindlichkeiten (Passiv)",
 "Total Profit",Gesamtgewinn,
-"Total Quantity",,
+"Total Quantity","Gesamtanzahl",
 "Total Spending",Gesamtausgaben,
 "Track Inventory",,
 Transfer,Überweisung,
