feat: update dutch translations for accuracy

--- a/translations/nl.csv
+++ b/translations/nl.csv
@@ -112,7 +112,7 @@ Back,Terug,
 "Bad import data, could not read file.","Slechte importgegevens, kon bestand niet lezen.",
 Balance,Balans,
 "Balance Amount","Saldo Bedrag",
-"Balance Sheet","Balans Blad",
+"Balance Sheet","Balansverslag",
 Bank,Bank,
 "Bank Accounts",Bankrekeningen,
 "Bank Entry","Bank invoer",
@@ -178,7 +178,7 @@ Closing,Afsluiting,
 "Closing Amount","Eindbedrag",
 "Closing Cash In Denominations","Geld in Coupures sluiten",
 "Closing Date","Sluitingsdatum",
-Collapse,Instorten,
+Collapse,Inklappen,
 Color,Kleur,
 "Commission on Sales","Commissie op Verkopen",
 Common,Algemeen,
@@ -342,7 +342,7 @@ Error,Fout,
 "Exchange Rate","Wisselkoers",
 "Excise Entry","Accijns Invoer",
 "Existing Company","Bestaand Bedrijf",
-Expand,Uitbreiden,
+Expand,Uitklappen,
 "Expected Amount","Verwacht Bedrag",
 Expense,Uitgave,
 "Expense Account","Onkostenrekening",
@@ -488,11 +488,11 @@ Item,Artikel,
 "Item with From location not found","Artikel met Van locatie niet gevonden",
 "Item with To location not found","Artikel met Naar locatie niet gevonden",
 "Item with barcode ${0} not found.","Artikel met barcode ${0} niet gevonden.",
-Items,Artikels,
+Items,Artikelen,
 January,Januari,
-"John Doe","John Doe",
+"John Doe","Willeke De Bruijn",
 "Journal Entries","Journaalposten",
-"Journal Entry","Journaal Invoer",
+"Journal Entry","Journaalpost",
 "Journal Entry Account","Rekening voor Journaalpost",
 "Journal Entry Number Series","Serie Nummer Journaalpost",
 "Journal Entry Print Template","Sjabloon voor het afdrukken van journaalposten",
@@ -689,12 +689,12 @@ Print,Afdrukken,
 "Print Template","Afdruksjabloon",
 "Print Template Name not set","Naam Afdruk-template niet ingesteld",
 "Print Template is empty","Afdruk-template is leeg",
-"Print Templates","Afdruk-templates",
+"Print Templates","Afdruksjablonen",
 "Print View","Afdrukweergave",
 "Print and Stationery","Drukwerk en Briefpapier",
 Product,Product,
-"Profit And Loss","Winst En Verlies",
-"Profit and Loss","Winst en Verlies",
+"Profit And Loss","Winst- en verliesrekening",
+"Profit and Loss","Winst- en verliesrekening",
 Purchase,Inkoop,
 "Purchase Acc.","Inkoop Acc.",
 "Purchase Invoice","Inkoopfactuur",
@@ -847,7 +847,7 @@ Service,Service,
 "Set Up","Instellen",
 "Set Up Your Workspace","Je Werkruimte Instellen",
 "Set a Template value to see the Print Template","Stel een Sjabloonwaarde in om de Afdruksjabloon te zien",
-"Set an Import Type","Een importtype Instellen",
+"Set an Import Type","Een invoer type instellen",
 "Set the display language.","De Weergavetaal Instellen.",
 "Set the local code. This is used for number formatting.","Stel de lokale code in. Dit wordt gebruikt voor nummeropmaak.",
 "Set up your company information, email, country and fiscal year","Stel uw bedrijfsgegevens, e-mailadres, land en boekjaar in",
