feat: use proper financial terms in Dutch languge

--- a/translations/nl.csv
+++ b/translations/nl.csv
@@ -50,8 +50,8 @@ Accounting,Boekhouding,
 "Accounting Ledger Entry","Boekhoudkundige Grootboekinvoer",
 "Accounting Settings","Boekhoud Instellingen",
 Accounts,Rekeningen,
-"Accounts Payable","Te Betalen Rekeningen",
-"Accounts Receivable","Te Ontvangen Rekeningen",
+"Accounts Payable","Crediteuren",
+"Accounts Receivable","Debiteuren",
 "Accumulated Depreciation","Gecumuleerde Afschrijvingen",
 Action,Actie,
 Active,Actief,
@@ -79,7 +79,7 @@ Address,Adres,
 "Address Line 1","Adresregel 1",
 "Address Line 2","Adresregel 2",
 "Address Name","Adres Naam",
-"Administrative Expenses","Administratieve Uitgaven",
+"Administrative Expenses","Administratieve Kosten",
 All,Alle,
 Amount,Bedrag,
 "Amount Paid","Betaald Bedrag",
@@ -160,8 +160,8 @@ Cashflow,Cashflow,
 "Change Ref Type","Referentietype wijzigen",
 "Changes made to settings will be visible on reload.","Wijzigingen aan instellingen zullen zichtbaar zijn bij het herladen.",
 Chargeable,Belastbaar,
-"Chart Of Accounts Reviewed","Rekeningstelsel Nagekeken",
-"Chart of Accounts",Rekeningstelsel,
+"Chart Of Accounts Reviewed","Beoordeeld Rekeningschema Nagekeken",
+"Chart of Accounts",Rekeningschema,
 Check,Controleer,
 Cheque,Cheque,
 "City / Town","Stad / Gemeente",
@@ -274,8 +274,8 @@ Depreciation,Afschrijving,
 Description,Beschrijving,
 Details,Details,
 "Difference Amount","Verschil Bedrag",
-"Direct Expenses","Directe Uitgaven",
-"Direct Income","Directe Inkomsten",
+"Direct Expenses","Directe Kosten",
+"Direct Income","Directe Opbrengsten",
 "Directory for database file ${0} does not exist, please select the file manually","Directory voor databasebestand ${0} bestaat niet, selecteer het bestand handmatig",
 Disabled,Uitgeschakeld,
 "Discount Account","Kortingsrekening",
@@ -328,7 +328,7 @@ Enabled,Ingeschakeld,
 "Enter Country to load States","Voer het Land in om Staten te laden",
 "Enter State","Staat Invoeren",
 "Enter barcode","Barcode Invoeren",
-"Entertainment Expenses","Uitgaven voor Ontspanning",
+"Entertainment Expenses","Kosten voor Ontspanning",
 Entry,Toegang,
 "Entry Currency","Toegang Valuta",
 "Entry Label","Toegangslabel",
@@ -344,10 +344,10 @@ Error,Fout,
 "Existing Company","Bestaand Bedrijf",
 Expand,Uitklappen,
 "Expected Amount","Verwacht Bedrag",
-Expense,Uitgave,
+Expense,Kosten,
 "Expense Account","Onkostenrekening",
-Expenses,Uitgaven,
-"Expenses Included In Valuation","Uitgaven opgenomen in Waardering",
+Expenses,Kosten,
+"Expenses Included In Valuation","Kosten opgenomen in Waardering",
 "Expiry Date","Vervaldatum",
 Export,Export,
 "Export Failed","Export Mislukt",
@@ -435,13 +435,13 @@ Image,Beeld,
 "Importer not set, reload tool","Importer niet ingesteld, hulpprogramma opnieuw laden",
 Inactive,Inactief,
 "Include Cancelled","Inbegrepen Geannuleerd",
-Income,Inkomen,
-"Income Account","Inkomstenrekening",
+Income,Opbrengsten,
+"Income Account","Opbrengstenrekening",
 "Increase print template display scale","Weergaveschaal van afdruksjabloon vergroten",
 Indigo,Indigo,
-"Indirect Expenses","Indirecte Uitgaven",
-"Indirect Income","Indirect Inkomen",
-Inflow,Instroom,
+"Indirect Expenses","Indirecte Kosten",
+"Indirect Income","Indirecte Opbrengsten",
+Inflow,Toevoer,
 "Instance Id","Instance Id",
 "Insufficient Quantity","Onvoldoende Hoeveelheid",
 "Insufficient Quantity.","Onvoldoende Hoeveelheid.",
@@ -533,7 +533,7 @@ Manufacture,Productie,
 "Mar 23, 2022","Mrt 23, 2022",
 March,Maart,
 "Mark ${0} as submitted?","${0} markeren als ingediend?",
-"Marketing Expenses","Marketing Uitgaven",
+"Marketing Expenses","Marketing Kosten",
 "Material Issue","Materiaal Probleem",
 "Material Receipt","Materiaalontvangst",
 "Material Transfer","Materiaaloverdracht",
@@ -541,7 +541,7 @@ May,Mei,
 Meter,Meter,
 Misc,Div,
 Miscellaneous,Diverse,
-"Miscellaneous Expenses","Diverse Uitgaven",
+"Miscellaneous Expenses","Diverse Kosten",
 Mo,Ma,
 Modified,Gewijzigd,
 "Modified By","Gewijzigd Door",
@@ -568,7 +568,7 @@ No,Neen,
 "No Values to be Displayed","Geen waarden weer te geven",
 "No entries found","Geen invoer gevonden",
 "No entries were imported.","Er zijn geen invoergegevens geïmporteerd.",
-"No expenses in this period","Geen uitgaven in deze periode",
+"No expenses in this period","Geen kosten in deze periode",
 "No filters selected","Geen filters geselecteerd",
 "No linked entries found","Geen gekoppelde items gevonden",
 "No results found","Geen resultaten gevonden",
@@ -591,7 +591,7 @@ November,November,
 "Number of Rows","Aantal Rijen",
 October,Oktober,
 "Office Equipments","Kantooruitrusting",
-"Office Maintenance Expenses","Uitgaven voor kantooronderhoud",
+"Office Maintenance Expenses","Kosten voor kantooronderhoud",
 "Office Rent","Kantoor Huren",
 Okay,Oké,
 "Onboarding Complete","Inwerken Voltooid",
@@ -636,7 +636,7 @@ Parent,Hoofd,
 Party,Partij,
 "Patch Run","Patch Run",
 Pay,Betaal,
-Payable,Betaalbaar,
+Payable,Crediteuren,
 Payment,Betaling,
 "Payment ${0} is Saved","Betaling ${0} is Opgeslagen",
 "Payment For","Betaling Voor",
@@ -715,7 +715,7 @@ Purchase,Inkoop,
 "Purchase Receipt Number Series","Serie Inkoopbonnummer",
 "Purchase Receipt Print Template","Template voor Afdrukken Inkoopbon",
 "Purchase Receipt Terms","Inkoopvoorwaarden",
-Purchases,Aankopen,
+Purchases,Inkopen,
 Purple,Paars,
 Purpose,Doel,
 "Qty in Batch","Aant. in Partij",
@@ -736,7 +736,7 @@ Rate,Koers,
 "Rate can't be negative.","Koers kan niet negatief zijn.",
 "Rate needs to be set","Koers moet worden ingesteld",
 "Raw Value: ${0}","Ruwe waarde: ${0}",
-Receivable,Te ontvangen,
+Receivable,Debiteuren,
 Receive,Ontvangen,
 Red,Rood,
 "Ref Name","Ref Naam",
@@ -753,7 +753,7 @@ References,Referenties,
 "Reload Frappe Books?","Frappe Books Herladen?",
 Report,Meld,
 "Report Error","Fout Melden",
-"Report Issue","Meld Kwestie",
+"Report Issue","Probleem Melden",
 "Report will use more than one page if required.","Het rapport zal indien nodig meer dan één pagina beslaan.",
 Reports,Verslagen,
 "Required fields not selected: ${0}","Verplichte velden niet geselecteerd: ${0}",
@@ -853,7 +853,7 @@ Service,Service,
 "Set up your company information, email, country and fiscal year","Stel uw bedrijfsgegevens, e-mailadres, land en boekjaar in",
 "Set up your opening balances before performing any accounting entries","Stel uw openingsbalansen in voordat u boekingen verricht",
 "Set up your organization","Opzetten van uw organisatie",
-"Set up your tax templates for your sales or purchase transactions","Uw belastingsjablonen instellen voor uw verkoop- of aankooptransacties",
+"Set up your tax templates for your sales or purchase transactions","Uw belastingsjablonen instellen voor uw verkoop- of inkooptransacties",
 "Sets how many digits are shown after the decimal point.","Geeft aan hoeveel cijfers achter de komma worden weergegeven.",
 "Sets the app-wide date display format.","Stelt de app-brede datumweergave-indeling in.",
 "Sets the internal precision used for monetary calculations. Above 6 should be sufficient for most currencies.","Stelt de interne precisie in die gebruikt wordt voor monetaire berekeningen. Boven de 6 zou voldoende moeten zijn voor de meeste valuta's.",
@@ -882,7 +882,7 @@ Shortcuts,Snelkoppelingen,
 Softwares,Software,
 "Something has gone terribly wrong. Please check the console and raise an issue.","Er is iets vreselijk misgegaan. Controleer de console en meld een probleem.",
 "Source of Funds (Liabilities)","Bron van Fondsen (Passiva)",
-"Standard Chart of Accounts","Standaard Rekeningstelsel",
+"Standard Chart of Accounts","Standaard Rekeningschema",
 Start,Start,
 "Start From Row Index","Begin vanaf rij-index",
 State,Status,
@@ -893,7 +893,7 @@ Stock,Stock,
 "Stock Assets","Stock Activa",
 "Stock Balance","Voorraad Balans",
 "Stock Entries","Voorraadboekingen",
-"Stock Expenses","Voorraad Uitgaven",
+"Stock Expenses","Voorraadkosten",
 "Stock In Hand","Voorraad in Hand",
 "Stock In Hand Acc.","Voorraad in de hand Acc.",
 "Stock Ledger","Voorraadboek",
@@ -988,19 +988,19 @@ To,Naar,
 "Toggle the List filter","Schakel het Lijstfilter in",
 "Toggle the Page filter","Schakel de Paginafilter in",
 "Toggle the Report filter","Schakel het Rapportfilter in",
-"Top Expenses","Hoogste Uitgaven",
+"Top Expenses","Hoogste Kosten",
 Total,Totaal,
 "Total Amount","Totaal Bedrag",
 "Total Asset (Debit)","Totaal Activa (Debet)",
 "Total Debit: ${0} must be equal to Total Credit: ${1}","Totaal debet: ${0} moet gelijk zijn aan Totaal Krediet: ${1}",
 "Total Discount","Totale Korting",
 "Total Equity (Credit)","Totaal Eigen Vermogen (Krediet)",
-"Total Expense (Debit)","Totale Uitgaven (Debet)",
-"Total Income (Credit)","Totaal Inkomen (Krediet)",
+"Total Expense (Debit)","Totale Kosten (Debet)",
+"Total Income (Credit)","Totaal Opbrengsten (Krediet)",
 "Total Liability (Credit)","Totale Verplichting (Krediet)",
 "Total Profit","Totale Winst",
 "Total Quantity","Totale Hoeveelheid",
-"Total Spending","Totale Uitgaven",
+"Total Spending","Totale Kosten",
 "Track Inventory","Inventaris Bijhouden",
 Transfer,Overdracht,
 "Transfer No","Overdracht Nr.",
@@ -1008,7 +1008,7 @@ Transfer,Overdracht,
 "Transfer Unit","Overdrachtseenheid",
 "Transfer Unit ${0} is not applicable for Item ${1}","Overdrachtseenheid ${0} is niet van toepassing op artikel ${1}",
 "Transfer will cause future entries to have negative stock.","Overboeking zorgt ervoor dat toekomstige boekingen een negatieve voorraad hebben.",
-"Travel Expenses","Reisuitgaven",
+"Travel Expenses","Reiskosten",
 "Trial Balance","Proefbalans",
 Tu,Di,
 Type,Type,
@@ -1025,7 +1025,7 @@ Unpaid,Onbetaald,
 "Use Full Width","Volledige Breedte Gebruiken",
 "Use List Filters","Lijstfilters Gebruiken",
 "User Remark","Gebruiker Opmerking",
-"Utility Expenses","Uitgaven voor Nutsvoorzieningen",
+"Utility Expenses","Kosten voor Nutsvoorzieningen",
 "Validation Error","Validatiefout",
 Value,Waarde,
 "Value missing for ${0}","Waarde ontbreekt voor ${0}",
@@ -1034,7 +1034,7 @@ Version,Versie,
 View,Bekijk,
 "View Accounting Entries","Boekingen Bekijken",
 "View Paid Invoices","Betaalde Facturen Weergeven",
-"View Purchases","Aankopen Bekijken",
+"View Purchases","Inkopen Bekijken",
 "View Sales","Verkoop Bekijken",
 "View Stock Entries","Voorraadgegevens Bekijken",
 "View Unpaid Invoices","Onbetaalde Facturen Bekijken",
